Implement get reply tweet endpoint
