# local-test/internal/handler/tweet/schema.gen.go
@@ -87,6 +87,12 @@ type GetQuotingUserInfosParams struct {
 	Offset int32 `form:"offset" json:"offset"`
 }
 
+// GetReplyTweetInfosParams defines parameters for GetReplyTweetInfos.
+type GetReplyTweetInfosParams struct {
+	Limit  int32 `form:"limit" json:"limit"`
+	Offset int32 `form:"offset" json:"offset"`
+}
+
 // GetRetweetingUserInfosParams defines parameters for GetRetweetingUserInfos.
 type GetRetweetingUserInfosParams struct {
 	Limit  int32 `form:"limit" json:"limit"`
@@ -125,6 +131,9 @@ type ServerInterface interface {
 	// Get quotes for a tweet
 	// (GET /tweets/{tweet_id}/quotes)
 	GetQuotingUserInfos(w http.ResponseWriter, r *http.Request, tweetId int64, params GetQuotingUserInfosParams)
+	// Get replies for a tweet
+	// (GET /tweets/{tweet_id}/replies)
+	GetReplyTweetInfos(w http.ResponseWriter, r *http.Request, tweetId int64, params GetReplyTweetInfosParams)
 	// Reply to a tweet
 	// (POST /tweets/{tweet_id}/reply)
 	PostReplyAndNotify(w http.ResponseWriter, r *http.Request, tweetId int64)
@@ -402,6 +411,64 @@ func (siw *ServerInterfaceWrapper) GetQuotingUserInfos(w http.ResponseWriter, r 
 	handler.ServeHTTP(w, r)
 }
 
+// GetReplyTweetInfos operation middleware
+func (siw *ServerInterfaceWrapper) GetReplyTweetInfos(w http.ResponseWriter, r *http.Request) {
+
+	var err error
+
+	// ------------- Path parameter "tweet_id" -------------
+	var tweetId int64
+
+	err = runtime.BindStyledParameterWithOptions("simple", "tweet_id", mux.Vars(r)["tweet_id"], &tweetId, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "tweet_id", Err: err})
+		return
+	}
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params GetReplyTweetInfosParams
+
+	// ------------- Required query parameter "limit" -------------
+
+	if paramValue := r.URL.Query().Get("limit"); paramValue != "" {
+
+	} else {
+		siw.ErrorHandlerFunc(w, r, &RequiredParamError{ParamName: "limit"})
+		return
+	}
+
+	err = runtime.BindQueryParameter("form", true, true, "limit", r.URL.Query(), &params.Limit)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "limit", Err: err})
+		return
+	}
+
+	// ------------- Required query parameter "offset" -------------
+
+	if paramValue := r.URL.Query().Get("offset"); paramValue != "" {
+
+	} else {
+		siw.ErrorHandlerFunc(w, r, &RequiredParamError{ParamName: "offset"})
+		return
+	}
+
+	err = runtime.BindQueryParameter("form", true, true, "offset", r.URL.Query(), &params.Offset)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "offset", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.GetReplyTweetInfos(w, r, tweetId, params)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
 // PostReplyAndNotify operation middleware
 func (siw *ServerInterfaceWrapper) PostReplyAndNotify(w http.ResponseWriter, r *http.Request) {
 
@@ -661,6 +728,8 @@ func HandlerWithOptions(si ServerInterface, options GorillaServerOptions) http.H
 	r.HandleFunc(options.BaseURL+"/tweets/{tweet_id}/quote", wrapper.PostQuoteAndNotify).Methods("POST")
 
 	r.HandleFunc(options.BaseURL+"/tweets/{tweet_id}/quotes", wrapper.GetQuotingUserInfos).Methods("GET")
+
+	r.HandleFunc(options.BaseURL+"/tweets/{tweet_id}/replies", wrapper.GetReplyTweetInfos).Methods("GET")
 
 	r.HandleFunc(options.BaseURL+"/tweets/{tweet_id}/reply", wrapper.PostReplyAndNotify).Methods("POST")
 
