# local-test/reference/tweet/api.yaml
@@ -23,6 +23,43 @@ paths:
                 "500":
                     description: Internal server error
 
+    /tweets/{tweet_id}/replies:
+        get:
+            summary: Get replies for a tweet
+            operationId: GetReplyTweetInfos
+            parameters:
+                - name: tweet_id
+                  in: path
+                  required: true
+                  schema:
+                      type: integer
+                      format: int64
+                - name: limit
+                  in: query
+                  required: true
+                  schema:
+                      type: integer
+                      format: int32
+                - name: offset
+                  in: query
+                  required: true
+                  schema:
+                      type: integer
+                      format: int32
+            responses:
+                "200":
+                    description: Replies fetched successfully
+                    content:
+                        application/json:
+                            schema:
+                                type: array
+                                items:
+                                    $ref: "#/components/schemas/TweetInfo"
+                "400":
+                    description: Bad request
+                "500":
+                    description: Internal server error
+
     /tweets/{tweet_id}/like:
         post:
             summary: Like a tweet and notify poster
